--- a/client/chat/views/chat.ng.html
+++ b/client/chat/views/chat.ng.html
@@ -1,66 +1,108 @@
 <div class="container margin-top-30 space-footer background-blacked border-white">
-    <div class="row border-white">
-        <div class="col-md-3 profile-boxes border-white no-padding">
-            <img src="http://lorempixel.com/200/200" class="img-responsive profile-picture"/>
-        </div>
-        <div class="col-md-2 profile-boxes  border-white">
-            <div class="col-md-3">
-                <img src="http://lorempixel.com/100/100" class="img-responsive"/>
-            </div>
-            <div class="col-md-9">
-                <span style="font-size: 0.87em;">Empreendedor</span>
-                <br>
-
-                <span style="font-size: 1.33em;">Renam Moreira</span>
-                <br>
-
-                <span style="font-size:0.77em;">juliana.barreiro@email.com</span>
-                <br>
+    <div class="row" id="barra-controle">
+        <div class="col-md-5 no-padding">
+            <div class="col-md-6 profile-boxes border-white no-padding">
+                <img src="http://lorempixel.com/264/154" class="img-responsive"/>
             </div>
 
-            <div>
-                <span><i class="fa fa-square"></i>Buseness</span>
-                <span><i class="fa fa-square"></i>Administração</span>
-            </div>
-        </div>
-
-        <div class="col-md-2 profile-boxes border-white">
-            <div class="row">
-                <div class="col-md-12">
-                    <span><i class="fa fa-star stars"></i></span>
-                    <span><i class="fa fa-star stars"></i></span>
-                    <span><i class="fa fa-star stars"></i></span>
-                    <span><i class="fa fa-star stars"></i></span>
-                    <span><i class="fa fa-star-half-o stars"></i></span>
+            <div class="col-md-6 profile-boxes border-white profile">
+                <div class="pull-right">
+                    <a class="btn btn-default" style="padding: 1px 6px;"><i class="fa fa-pencil"></i> Editar</a>
                 </div>
-                <div>
-                    media de avaliações
-                </div>
-                <div class="col-md-6">
+
+                <div class="col-md-3 no-padding picture">
                     <img src="http://lorempixel.com/100/100" class="img-responsive"/>
                 </div>
-                <div class="col-md-6"><b class="horas-mentorias">9</b> badges</div>
+
+                <div class="col-md-9 identification">
+                    <span style="font-size: 0.87em;">Empreendedor</span>
+                    <br>
+
+                    <span style="font-size: 1.33em;">Renam Moreira</span>
+                    <br>
+
+                    <span style="font-size:0.77em;">juliana.barreiro@email.com</span>
+                    <br>
+                </div>
+
+                <div class="col-md-12 no-padding habilidades">
+                    <span><i class="glyphicon glyphicon-stop" style="color: #F98800"></i>Buseness</span>
+                    <span><i class="glyphicon glyphicon-stop" style="color: #005FEA"></i>Administração</span>
+                </div>
             </div>
         </div>
 
-        <div class="col-md-2 profile-boxes border-white">
-            <p class="text-center">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque autem dolor dolores, doloribus, eius eligendi enim fugiat incidunt ipsam labore magnam, repellendus sapiente similique
-                voluptates! Dolorum ipsam optio soluta.
-            </p>
-        </div>
+        <div class="col-md-7 no-padding">
+            <div class="col-md-3 profile-boxes border-white score">
+                <div>
+                    <p>
+                        <span><i class="fa fa-star stars"></i></span>
+                        <span><i class="fa fa-star stars"></i></span>
+                        <span><i class="fa fa-star stars"></i></span>
+                        <span><i class="fa fa-star stars"></i></span>
+                        <span><i class="fa fa-star-half-o stars"></i></span>
+                    </p>
 
-        <div class="col-md-1 profile-boxes border-white">
-            <a href="" class="border-white"><i class="fa fa-facebook-official icon-bar"></i></a>
+                    <p>
+                        <small>media de avaliações</small>
+                    </p>
 
-            <a href="" class="border-white"><i class="fa fa-twitter icon-bar"></i></a>
-            <a href="" class="border-white"><i class="fa fa-linkedin icon-bar"></i></a>
+                    <br/>
 
-        </div>
-        <div class="col-md-2 profile-boxes border-white">
-            <button class="btn btn-default profile-actions"><i class="fa fa-commenting-o"></i> Mensagens <span>3</span></button>
-            <button class="btn btn-default profile-actions"><i class="fa fa-calendar"></i> Agenda <span></span>0</button>
-            <button class="btn btn-default profile-actions"><i class="fa fa-group"></i> Ações de mentoria<span>2</span></button>
+                    <div class="col-md-6 text-center">
+                        <img src="http://lorempixel.com/100/100" width="40"/>
+
+                        <p>
+                            <small>Gist</small>
+                        </p>
+                    </div>
+
+                    <div class="col-md-6 text-center">
+                        <b class="horas-mentorias" style="">
+                            9
+                        </b>
+
+                        <p>
+                            <small>badges</small>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 profile-boxes border-white descricao">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque autem dolor dolores, doloribus, eius eligendi enim fugiat incidunt ipsam labore magnam, repellendus sapiente
+                    similique voluptates!
+                </p>
+            </div>
+
+            <div class="col-md-1 profile-boxes border-white social">
+                <a href="" class="border-white"><i class="fa fa-facebook icon-bar"></i></a>
+                <a href="" class="border-white"><i class="fa fa-linkedin icon-bar"></i></a>
+                <a href="" class="border-white"><i class="fa fa-twitter icon-bar"></i></a>
+            </div>
+
+            <div class="col-md-4 profile-boxes border-white report">
+                <p>
+                    <button class="btn btn-default profile-actions">
+                        <span class="legenda"><i class="fa fa-commenting-o"></i> Mensagens</span>
+                        <span class="numero">3</span>
+                    </button>
+                </p>
+                <p>
+                    <button class="btn btn-default profile-actions">
+                        <span class="legenda"><i class="fa fa-calendar"></i> Agenda</span>
+                        <span class="numero">0</span>
+                    </button>
+                </p>
+                <p>
+                    <button class="btn btn-default profile-actions">
+                        <span class="legenda"><i class="fa fa-group"></i> Ações de mentoria</span>
+                        <span class="numero">2</span>
+                    </button>
+                </p>
+            </div>
+
         </div>
     </div>
 
