--- a/client/chat/views/chat.ng.html
+++ b/client/chat/views/chat.ng.html
@@ -1,111 +1,4 @@
-<div class="container margin-top-30 space-footer background-blacked border-white">
-    <div class="row" id="barra-controle">
-        <div class="col-md-5 no-padding">
-            <div class="col-md-6 profile-boxes border-white no-padding">
-                <img src="http://lorempixel.com/264/154" class="img-responsive"/>
-            </div>
-
-            <div class="col-md-6 profile-boxes border-white profile">
-                <div class="pull-right">
-                    <a class="btn btn-default" style="padding: 1px 6px;"><i class="fa fa-pencil"></i> Editar</a>
-                </div>
-
-                <div class="col-md-3 no-padding picture">
-                    <img src="http://lorempixel.com/100/100" class="img-responsive"/>
-                </div>
-
-                <div class="col-md-9 identification">
-                    <span style="font-size: 0.87em;">Empreendedor</span>
-                    <br>
-
-                    <span style="font-size: 1.33em;">Renam Moreira</span>
-                    <br>
-
-                    <span style="font-size:0.77em;">juliana.barreiro@email.com</span>
-                    <br>
-                </div>
-
-                <div class="col-md-12 no-padding habilidades">
-                    <span><i class="glyphicon glyphicon-stop" style="color: #F98800"></i>Buseness</span>
-                    <span><i class="glyphicon glyphicon-stop" style="color: #005FEA"></i>Administração</span>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-7 no-padding">
-            <div class="col-md-3 profile-boxes border-white score">
-                <div>
-                    <p>
-                        <span><i class="fa fa-star stars"></i></span>
-                        <span><i class="fa fa-star stars"></i></span>
-                        <span><i class="fa fa-star stars"></i></span>
-                        <span><i class="fa fa-star stars"></i></span>
-                        <span><i class="fa fa-star-half-o stars"></i></span>
-                    </p>
-
-                    <p>
-                        <small>media de avaliações</small>
-                    </p>
-
-                    <br/>
-
-                    <div class="col-md-6 text-center">
-                        <img src="http://lorempixel.com/100/100" width="40"/>
-
-                        <p>
-                            <small>Gist</small>
-                        </p>
-                    </div>
-
-                    <div class="col-md-6 text-center">
-                        <b class="horas-mentorias" style="">
-                            9
-                        </b>
-
-                        <p>
-                            <small>badges</small>
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 profile-boxes border-white descricao">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque autem dolor dolores, doloribus, eius eligendi enim fugiat incidunt ipsam labore magnam, repellendus sapiente
-                    similique voluptates!
-                </p>
-            </div>
-
-            <div class="col-md-1 profile-boxes border-white social">
-                <a href="" class="border-white"><i class="fa fa-facebook icon-bar"></i></a>
-                <a href="" class="border-white"><i class="fa fa-linkedin icon-bar"></i></a>
-                <a href="" class="border-white"><i class="fa fa-twitter icon-bar"></i></a>
-            </div>
-
-            <div class="col-md-4 profile-boxes border-white report">
-                <p>
-                    <button class="btn btn-default profile-actions">
-                        <span class="legenda"><i class="fa fa-commenting-o"></i> Mensagens</span>
-                        <span class="numero">3</span>
-                    </button>
-                </p>
-                <p>
-                    <button class="btn btn-default profile-actions">
-                        <span class="legenda"><i class="fa fa-calendar"></i> Agenda</span>
-                        <span class="numero">0</span>
-                    </button>
-                </p>
-                <p>
-                    <button class="btn btn-default profile-actions">
-                        <span class="legenda"><i class="fa fa-group"></i> Ações de mentoria</span>
-                        <span class="numero">2</span>
-                    </button>
-                </p>
-            </div>
-
-        </div>
-    </div>
-
+<div class="container space-footer background-blacked border-white">
     <div id="chat">
 
         <div class="col-md-5 no-padding">
