--- a/client/trajetoria/views/criar-trajetoria.ng.html
+++ b/client/trajetoria/views/criar-trajetoria.ng.html
@@ -1,68 +1,7 @@
 <div class="container margin-top-30 space-footer background-blacked border-white">
-    <div class="row border-white">
-        <div class="col-md-3 profile-boxes border-white no-padding">
-            <img src="http://lorempixel.com/200/200" class="img-responsive profile-picture"/>
-        </div>
-        <div class="col-md-2 profile-boxes  border-white">
-            <div class="col-md-3">
-                <img src="http://lorempixel.com/100/100" class="img-responsive"/>
-            </div>
-            <div class="col-md-9">
-                <span style="font-size: 0.87em;">Empreendedor</span>
-                <br>
 
-                <span style="font-size: 1.33em;">Renam Moreira</span>
-                <br>
+    <ng-include src="'client/barra-controle.html'"></ng-include>
 
-                <span style="font-size:0.77em;">juliana.barreiro@email.com</span>
-                <br>
-            </div>
-
-            <div>
-                <span><i class="fa fa-square"></i>Buseness</span>
-                <span><i class="fa fa-square"></i>Administração</span>
-            </div>
-        </div>
-
-        <div class="col-md-2 profile-boxes border-white">
-            <div class="row">
-                <div class="col-md-12">
-                    <span><i class="fa fa-star stars"></i></span>
-                    <span><i class="fa fa-star stars"></i></span>
-                    <span><i class="fa fa-star stars"></i></span>
-                    <span><i class="fa fa-star stars"></i></span>
-                    <span><i class="fa fa-star-half-o stars"></i></span>
-                </div>
-                <div>
-                    media de avaliações
-                </div>
-                <div class="col-md-6">
-                    <img src="http://lorempixel.com/100/100" class="img-responsive"/>
-                </div>
-                <div class="col-md-6"><b class="horas-mentorias">9</b> badges</div>
-            </div>
-        </div>
-
-        <div class="col-md-2 profile-boxes border-white">
-            <p class="text-center">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque autem dolor dolores, doloribus, eius eligendi enim fugiat incidunt ipsam labore magnam, repellendus sapiente similique
-                voluptates! Dolorum ipsam optio soluta.
-            </p>
-        </div>
-
-        <div class="col-md-1 profile-boxes border-white">
-            <a href="" class="border-white"><i class="fa fa-facebook-official icon-bar"></i></a>
-
-            <a href="" class="border-white"><i class="fa fa-twitter icon-bar"></i></a>
-            <a href="" class="border-white"><i class="fa fa-linkedin icon-bar"></i></a>
-
-        </div>
-        <div class="col-md-2 profile-boxes border-white">
-            <button class="btn btn-default profile-actions"><i class="fa fa-commenting-o"></i> Mensagens <span>3</span></button>
-            <button class="btn btn-default profile-actions"><i class="fa fa-calendar"></i> Agenda <span></span>0</button>
-            <button class="btn btn-default profile-actions"><i class="fa fa-group"></i> Ações de mentoria<span>2</span></button>
-        </div>
-    </div>
 
     <div id="trajetoria-de-desenvolvimento">
 
