--- a/client/trajetoria/views/visualizar-trajetoria.ng.html
+++ b/client/trajetoria/views/visualizar-trajetoria.ng.html
@@ -1,6 +1,6 @@
 <div class="container margin-top-30 space-footer background-blacked border-white">
 
-    <ng-include src="'client/barra-controle.html'"></ng-include>
+    <ng-include src="client/barra-controle.html"></ng-include>
 
     <div id="trajetoria-de-desenvolvimento">
 
