- Inserido as aspas simples a mais no include. Arranjo dos detalhes da tela Painel PMO #38.

--- a/client/perfis/views/painel-controle.ng.html
+++ b/client/perfis/views/painel-controle.ng.html
@@ -1,10 +1,10 @@
-<div class="container margin-top-30" id="painel-controle">
+<div class="container margin-top-30 space-footer" id="painel-controle">
 
-    <div class="col-md-5 no-padding">
-        <div class="col-md-6 no-padding" style="padding-right: 15px !important;">
+    <div class="col-lg-5 col-md-4 col-sm-12 no-padding">
+        <div class="col-sm-6 no-padding" style="padding-right: 15px !important;">
             <h3 class="text-center">Empresas</h3>
 
-            <ul id="lista-empresas" class="lista">
+            <div id="lista-empresas"><ul class="lista">
                 <li>
                     <div>A</div>
                     <div></div>
@@ -34,10 +34,10 @@
                     <div></div>
                 </li>
                 <li class="item">
-                    <div>
+                    <div class="picture">
                         <img src="http://lorempixel.com/200/200" class="img-responsive"/>
                     </div>
-                    <div>
+                    <div class="identification">
                         <h5>Gist</h5>
 
                         <p>Soluções em Games</p>
@@ -120,11 +120,12 @@
                     <div></div>
                 </li>
             </ul>
+            </div>
         </div>
-        <div class="col-md-6 no-padding" style="padding-right: 15px !important;">
+        <div class="col-sm-6 no-padding" style="padding-right: 15px !important;">
             <h3 class="text-center">Usuários</h3>
 
-            <ul id="lista-usuarios" class="lista">
+            <div id="lista-usuarios"><ul class="lista">
                 <li>
                     <div>A</div>
                     <div></div>
@@ -154,10 +155,10 @@
                     <div></div>
                 </li>
                 <li class="item">
-                    <div>
+                    <div class="picture">
                         <img src="http://lorempixel.com/200/200" class="img-responsive"/>
                     </div>
-                    <div>
+                    <div class="identification">
                         <h5>Gist</h5>
 
                         <p>Soluções em Games</p>
@@ -239,20 +240,20 @@
                     <div>Z</div>
                     <div></div>
                 </li>
-            </ul>
+            </ul></div>
         </div>
     </div>
-    <div class="col-md-7 no-padding">
+    <div class="col-lg-7 col-md-8 col-xs-12 no-padding">
         <h3 class="text-center">Trajetórias</h3>
 
-        <div id="trajetorias">
-            <div class="col-md-12">
-                <div class="col-md-3">
+        <div id="trajetorias"><div>
+            <div class="requisicao">
+                <div class="col-xs-4 ligacao">
                     <div>
-                        <div class="col-md-5 no-padding">
+                        <div class="col-xs-5 no-padding picture">
                             <img src="http://lorempixel.com/200/200" class="img-responsive"/>
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-xs-7">
                             <h5>Gist</h5>
 
                             <p>Soluções em Games</p>
@@ -260,84 +261,39 @@
                     </div>
                     <hr/>
                     <div>
-                        <div class="col-md-5 no-padding">
+                        <div class="col-xs-5 no-padding picture">
                             <img src="http://lorempixel.com/200/200" class="img-responsive"/>
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-xs-7">
                             <h5>Renam Moreira</h5>
 
                             <p>Empreendedor / Lider</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <h5 class="text-center">Solicitação de Alteração</h5>
+                <div class="col-xs-4 solicitacao">
+                    <h5 class="text-center"><strong>Solicitação de Alteração</strong></h5>
 
-                    <p>Etapa: <strong>Benchmarking</strong></p>
+                    <p>Etapa: <strong>Benchmarking</strong></p><br/>
 
                     <p>Prazo atual: <strong>10/11/2015 a 20/11/2015</strong></p>
 
-                    <p>Prazo solicitado: <strong>10/11/2015 a 22/11/2015</strong></p>
+                    <p>Prazo solicitado: <strong>10/11/2015 a 22/11/2015</strong></p><br/>
 
-                    <div class="text-center">
+                    <div class="text-center botoes">
                         <a href="#" class="btn btn-default"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Aceitar</a>
                         <a href="#" class="btn btn-default"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Negar</a>
                     </div>
                 </div>
-                <div class="col-md-5">
-                    <h5 class="text-center">Comentário</h5>
+                <div class="col-xs-4 comentario">
+                    <h5 class="text-center"><strong>Comentário</strong></h5>
 
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur eaque eum explicabo modi perferendis quaerat quo sequi. Autem blanditiis doloremque dolores illo impedit
                         ipsum iure natus
                         tempora vero vitae!</p>
                 </div>
             </div>
-            <div class="col-md-12">
-                <div class="col-md-3">
-                    <div>
-                        <div class="col-md-5 no-padding">
-                            <img src="http://lorempixel.com/200/200" class="img-responsive"/>
-                        </div>
-                        <div class="col-md-7">
-                            <h5>Gist</h5>
-
-                            <p>Soluções em Games</p>
-                        </div>
-                    </div>
-                    <hr/>
-                    <div>
-                        <div class="col-md-5 no-padding">
-                            <img src="http://lorempixel.com/200/200" class="img-responsive"/>
-                        </div>
-                        <div class="col-md-7">
-                            <h5>Renam Moreira</h5>
-
-                            <p>Empreendedor / Lider</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <h5 class="text-center">Solicitação de Alteração</h5>
-
-                    <p>Etapa: <strong>Benchmarking</strong></p>
-
-                    <p>Prazo atual: <strong>10/11/2015 a 20/11/2015</strong></p>
-
-                    <p>Prazo solicitado: <strong>10/11/2015 a 22/11/2015</strong></p>
-
-                    <div class="text-center">
-                        <a href="#" class="btn btn-default"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Aceitar</a>
-                        <a href="#" class="btn btn-default"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Negar</a>
-                    </div>
-                </div>
-                <div class="col-md-5">
-                    <h5 class="text-center">Comentário</h5>
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequuntur eaque eum explicabo modi perferendis quaerat quo sequi. Autem blanditiis doloremque dolores illo impedit
-                        ipsum iure natus
-                        tempora vero vitae!</p>
-                </div>
-            </div>
+        </div>
         </div>
     </div>
 </div>
