--- a/client/perfis/views/perfilDetalhes.ng.html
+++ b/client/perfis/views/perfilDetalhes.ng.html
@@ -1,6 +1,6 @@
 <div class="container margin-top-30 space-footer background-blacked border-white">
 
-    <ng-include src="client/barra-controle.html"></ng-include>
+    <ng-include src="'client/barra-controle.html'"></ng-include>
 
     <!-- Calendario daqui pra baixo-->
 
