--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -378,6 +378,7 @@ textarea:focus, input:focus {
 #painel-controle {
     border           : 1px solid #fff;
     background-color : rgba(0, 0, 0, 0.6);
+    padding-bottom   : 20px;
 }
 
 #painel-controle #lista-usuarios {
@@ -393,11 +394,15 @@ textarea:focus, input:focus {
     padding          : 0;
     border           : 1px solid rgb(255, 255, 255);
     overflow         : hidden;
-    background-color : rgba(123, 123, 123, 0.9);
+    background-color : rgba(127, 127, 127, 0.7);
 }
 
 #painel-controle .lista .item {
 
+}
+
+#painel-controle .lista .item .picture img {
+    border : 1px solid #fff;
 }
 
 #painel-controle .lista > li {
@@ -417,64 +422,151 @@ textarea:focus, input:focus {
     margin-bottom : 0;
 }
 
-#painel-controle .lista > li.item > div:first-child {
-    margin-bottom : 0;
+#painel-controle .lista > li.item > .picture {
+    margin-bottom    : 0;
+    background-color : rgba(110, 110, 110, 0.7);
 }
 
-#painel-controle .lista > li.item > div:last-child {
-    margin-bottom : 0;
+#painel-controle .lista > li.item > .identification {
+    margin-bottom    : 0;
+    background-color : rgba(60, 60, 60, 0.7);
+}
+
+#painel-controle .lista > li.item > .identification {
+
+
 }
 
 #painel-controle .lista > li > div:first-child {
     width            : 30%;
-    background-color : rgba(144, 144, 144, 0.9);
+    background-color : rgba(144, 144, 144, 0.7);
     text-align       : center;
 }
 
 #painel-controle .lista > li > div:last-child {
-    width : 70%;
+    width            : 70%;
 }
 
 #painel-controle #trajetorias {
     border           : 1px solid #fff;
     overflow         : hidden;
-    background-color : rgba(90, 90, 90, 0.9);
+    background-color : rgba(90, 90, 90, 0.7);
 }
 
-#painel-controle #trajetorias > div {
+#painel-controle #trajetorias .requisicao {
+    padding       : 10px 0;
     border-bottom : 1px solid #fff;
-    padding       : 10px;
+    overflow      : hidden;
 }
 
-#painel-controle #trajetorias > div > div {
-    padding : 10px;
+#painel-controle #trajetorias .requisicao > div {
+    padding    : 0 10px;
+    min-height : 200px;
 }
 
-#painel-controle #trajetorias > div > div hr {
+#painel-controle #trajetorias .requisicao > div h5 {
+    margin-top : 0;
+}
+
+#painel-controle #trajetorias .requisicao > div hr {
     clear     : both;
     width     : 68px;
     transform : rotate(90deg);
 }
 
-#painel-controle #trajetorias > div > div p {
+#painel-controle #trajetorias .requisicao > div p {
     margin-bottom : 0;
 }
 
-#painel-controle #trajetorias > div div {
+#painel-controle #trajetorias .requisicao div {
     z-index : 1;
 }
 
-#painel-controle #trajetorias > div > div:first-child {
+#painel-controle #trajetorias .requisicao > .ligacao {
     border-right : 1px solid #fff;
-    padding      : 0 10px 0 0;
 }
 
-#painel-controle #trajetorias > div > div:last-child {
+#painel-controle #trajetorias .requisicao > .ligacao p {
+    font-size : 0.85em;
+}
+
+#painel-controle #trajetorias .requisicao > .ligacao .picture {
+    border : 1px solid #fff;
+}
+
+#painel-controle #trajetorias .requisicao > .solicitacao {
+}
+
+#painel-controle #trajetorias .requisicao > .solicitacao .botoes span{
+    margin-right: 5px;
+}
+
+#painel-controle #trajetorias .requisicao > .solicitacao p {
+    font-size : 0.85em;
+}
+
+#painel-controle #trajetorias .requisicao > .comentario {
     border-left : 1px solid #fff;
-    padding     : 0 0 0 10px;
+}
+
+#painel-controle #trajetorias .requisicao > .comentario p {
+    font-size : 0.85em;
+    text-align: justify;
 }
 
 /********************************Painel de Controle End********************************/
+
+/********************************Scroll Bar Personalizado********************************/
+.vertical {
+    overflow : hidden;
+}
+
+.vertical .sbCtntCtnr * {
+    max-width : 16px !important;
+}
+
+.vertical {
+    height : 500px;
+}
+
+.vertical .sbCtntCtnr {
+    background : #CCC;
+    padding    : 0;
+    margin     : 0;
+    text-align : center;
+    border     : 1px solid #ABC;
+    display    : table;
+}
+
+.vertical .sbCtntCtnr {
+    height : 100%;
+    width  : 18px;
+    float  : right;
+}
+
+/*IE 8 requires !Doctype, IE 9 > supports, no IE 7 Support*/
+
+.sbCtntCtnr > * {
+    display : table-row;
+}
+
+.sbCtntCtnr > * span.middle {
+    display    : table-cell;
+    text-align : middle;
+    height     : 100%;
+    background : #797979;
+    width      : 100%;
+}
+
+.sbCtntCtnr > * span.middle > .scrollBtn {
+    min-height : 16px !important;
+    min-width  : 16px !important;
+    position   : relative;
+    background : #FFF;
+    display    : inline-block;
+}
+
+/********************************Scroll Bar Personalizado End********************************/
 
 /********************************Barra de Controle********************************/
 
@@ -579,25 +671,25 @@ textarea:focus, input:focus {
 }
 
 @media (max-width : 768px) {
-    #barra-controle .report .legenda{
-        font-size: 17px;
-        margin-top: 5px;
+    #barra-controle .report .legenda {
+        font-size  : 17px;
+        margin-top : 5px;
     }
 
     #barra-controle .social {
-        padding: 0;
+        padding : 0;
     }
 
     #barra-controle .descricao {
-        font-size  : 0.77em;
+        font-size : 0.77em;
     }
 
     #barra-controle .score .stars {
-        font-size  : 0.77em;
+        font-size : 0.77em;
     }
 
     #barra-controle .score .media-avaliacao {
-        font-size: 0.77em;
+        font-size : 0.77em;
     }
 }
 
@@ -789,34 +881,6 @@ textarea:focus, input:focus {
 }
 
 /********************************Chat End********************************/
-
-/********************************Painel de Controle********************************/
-
-#painel-controle {
-
-}
-
-#painel-controle #lista-usuarios {
-
-}
-
-#painel-controle #lista-empresas {
-
-}
-
-#painel-controle .lista {
-
-}
-
-#painel-controle .lista .item {
-
-}
-
-#painel-controle .lista > div {
-
-}
-
-/********************************Painel de Controle********************************/
 
 /********************************Progress Bar********************************/
 .progressbar {
